User johns
Date:

    Makes 4:3 and 16:9 display format configurable.
    Don't use DVB display format.

User Zoolook
Date: Tue Jan  1 12:49:19 CET 2013

    Add support for new vdr ScaleVideo API.

User johns
Date: Tue Jan  1 12:40:12 CET 2013

    Add support for old PES HDTV recording.
    Disable trickspeed hack, to prevent ffmpeg crash.
    Makes X11 server arguments configurable.
    Add german translation.

User FireFly
Date: Sun Nov 18 21:15:50 CET 2012

    Add german translation.

User johns
Date: Thu Nov 15 22:28:55 CET 2012

    Release Version 0.5.2

User  maverick-me
Date: Mon Nov 5 23:13:42 CET 2012

    Fix 3d OSD position.

User  maverick-me
Date: Tue Oct 30 16:50:25 CET 2012

    Add support to change the OSD for 3d SBS/TB streams.

User johns
Date: Tue Oct 30 12:11:25 CEST 2012

    Use software decoder for still-pictures.
    Add Feature #1103: change audio devices without vdr restart.
    Fix bug #1089: Vdpau decoder used wrong number of mpeg reference frames.
    Fix bug: with some streams endless loop in pes audio parser.
    Report correct video size in cSoftHdDevice::GetVideoSize.
    Add picture adjustment support for vdpau.
    Revert "mpeg_vdpau" back to "mpegvideo_vdpau".
    Fix bug: Can't use software decoder with VDPAU.
    Resume plugin, if suspend control stops.
    Removes old audio code (!USE_AUDIORING).
    Use -DOSD_DEBUG to debug OSD.

User arttupii
Date: Tue Aug 7 16:46:23 2012 +0200

    Fix bug #909: Subtitles destroy menu.
    Fix bug #1003: Subtitles overlapping.

User johns
Date: Fri Jul 27 19:15:48 CEST 2012

    Free used X11 resources colormap, pixmap, cursor.
    Fix bug: spelling USE_VAPI wrong, missing functions.

User johns
Date: Tue Jul  3 16:35:46 CEST 2012

    Release Version 0.5.1
    Add commandline support to disable hardware decoder.
    Display frame statistics in plugin menu.
    Fix bug: 100% CPU use during playback.
    Fix bug: audio use 100% CPU during pause.